# lunch_menu

backend/: .gitignore  Cargo.toml  database.sqlite
backend/migrations/: 20240212184740_students.sql  20240212192613_menu.sql
backend/src/: ;w  main.rs  models.rs
