[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["form"] }
axum-error = "0.2.0"
axum-macros = "0.4.1"
axum-server = "0.6.0"
chrono = "0.4.34"
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlite", "time", "chrono"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
